[add]タグ・ワード検索機能、[edit]各ビューページ

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,9 +9,8 @@
 
 
 //デプロイ手順で行った「背景画像を表示できるようにする」記述
-//画像がないからだと思われる
 //body {
-//  background-image: image-url("hoge.jpg");
+//  background-image: image-url("no_image.jpg");
 //}
 
 //トップページテキスト下の背景画像
