--- a/app/views/public/reviewer_comments/show.html.erb
+++ b/app/views/public/reviewer_comments/show.html.erb
@@ -37,7 +37,7 @@
         <tr>
           <td class="border border-0"><h5>タグ</h5></td>
           <td class="border border-0">
-            <% @reviewer_comment.tags.each do |tag| %>
+            <% @shop.tags.each do |tag| %>
               <%= tag.name %>
             <% end %>
           </td>
