--- a/app/views/admin/reviewers/index.html.erb
+++ b/app/views/admin/reviewers/index.html.erb
@@ -22,9 +22,9 @@
       <td>
         <% status=reviewer.is_deleted %>
         <% if status==false %>
-          <p>有効</p>
+          <p class="text-success">有効</p>
         <% else %>
-          <p>退会</p>
+          <p class="text-danger">退会</p>
         <% end %>
       </td>
     </tr>
