--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,32 +19,41 @@
   <div class="row">
       <!--タグ検索機能-->
     <div class='col-md-6 mx-auto'>
-      <%= form_tag reviewer_comments_path, method: :get, class: 'boards__searchForm' do %>
+      <%= form_with url: search_path, method: :get, class: 'boards__searchForm' do %>
       <%= select_tag :tag_id,
         options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
         {
           prompt: 'タグで絞り込み',
-          onchange: '検索(this.form);'
+          onchange: 'submit(this.form);'
         } %>
     <% end %>
     </div>
 
     <div class='col-md-6 mx-auto'>
-      ワード検索機能実装予定（Shopモデルから探す）
+      <div class="search_form">
+        <%= form_with url: search_path, local: true, method: :get do |f| %>
+          <%= f.text_field :word %>
+          <%= f.select :range, options_for_select([["お店を探す", 'Shop'], ["レビューを探す", 'ReviewerComent']]) %>
+          <%#= f.select :search, options_for_select([["部分一致","partial_match"]]) %>
+          <%= f.submit "検索", class: "btn btn-primary" %>
+        <% end %>
+  </div>
     </div>
   </div>
-
+  <div class='row mt-4 bg-secondary text-light'>
+    <h5>最近登録されたお店</h5>
+  </div>
   <div class='row mt-4'>
-    <div class='col mx-auto'>
-      <h5 class="bg-secondary text-light">最近登録されたお店</h5>
-        <% @shops.each do |shop| %>
+      <% @shops.each do |shop| %>
+        <div class='col mx-auto'>
           <%= link_to shop_path(shop.id) do %>
-            <%#= image_tag shop.image %><!--NameError-->
+            <%= image_tag shop.shop_image, size: "100x100" %> <br>
             <%= shop.name %>
           <% end %>
-        <% end %>
-        <br>
-        <%= link_to "すべてのお店をチェックする >", shops_path %>
+        </div>
+      <% end %>
+      <br>
+      <%= link_to "すべてのお店をチェックする >", shops_path %>
     </div>
   </div>
 
