--- a/app/views/public/shops/_reviewer_comments.html.erb
+++ b/app/views/public/shops/_reviewer_comments.html.erb
@@ -1,13 +1,13 @@
-<!--自分の投稿だけ表示させられるのか-->
+<!--会員全員のレビュー一覧-->
 <div class='container'>
   <div class='row'>
     <div class='col'>
-      <h5 class="bg-secondary text-light">コメント一覧</h5>
+      <h5 class="bg-secondary text-light">レビュー一覧</h5>
       <% shop.reviewer_comments.where.not(id: nil).each do |reviewer_comment| %>
       <div class='col'>
         <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
         <%= reviewer_comment.reviewer.nickname %>
-        <%= link_to reviewer_comment_path(reviewer_comment.id) do %>
+        <%= link_to shop_reviewer_comment_path(shop, reviewer_comment) do %>
         <%= reviewer_comment.body.truncate(10, omission: "...") %> <!--長い文字列を省略する-->
         <% end %>
         <!--★評価の表示-->
@@ -25,8 +25,8 @@
 
         <!--current_reviewerには編集・削除ボタンを出す-->
         <% if reviewer_comment.reviewer == current_reviewer %>
-          <%= link_to "編集", edit_reviewer_comment_path(reviewer_comment), class: "btn btn-sm btn-success" %>
-          <%= link_to "削除", reviewer_comment_path(reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger" %>
+          <%= link_to "編集", edit_shop_reviewer_comment_path(shop, reviewer_comment), class: "btn btn-sm btn-success" %>
+          <%= link_to "削除", shop_reviewer_comment_path(shop,reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger" %>
         <% end %>
       </div>
       <% end %>
