--- a/app/views/public/reviewer_comments/show.html.erb
+++ b/app/views/public/reviewer_comments/show.html.erb
@@ -42,6 +42,15 @@
             <% end %>
           </td>
         </tr>
+        <tr>
+          <td class="border border-0"></td>
+          <td class="border border-0">
+            <% if @reviewer_comment.reviewer == current_reviewer %>
+              <%= link_to "編集", edit_shop_reviewer_comment_path(@shop, @reviewer_comment), class: "btn btn-sm btn-success mr-2" %>
+              <%= link_to "削除", shop_reviewer_comment_path(@shop,@reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger ml-2" %>
+            <% end %>
+          </td>
+        </tr>
       </table>
     </div>
   </div>
