--- a/app/views/public/reviewers/edit.html.erb
+++ b/app/views/public/reviewers/edit.html.erb
@@ -2,10 +2,14 @@
   <div class='row'>
     <div class='col mx-auto'>
       <h5 class='mt-3 bg-secondary text-light'>会員情報の編集</h5>
-      <%= form_with model: current_reviewer, url: reviewers_information_edit_path, method: :patch, local: true do |f| %>
+      <%= form_with model: current_reviewer, url: reviewers_information_path, method: :patch, local: true do |f| %>
+        <div class="image">
+          <%= f.label :profile_image, "アイコン" %>
+          <%= f.file_field :profile_image, class: "form-control-file reviewer_image", accept: 'image/*' %>
+        </div>
         <div class="field">
           <%= f.label :nickname, "ニックネーム" %><br>
-          <%= f.text_field :nickname, autofocus: true, class: "nickname rounded" %>
+          <%= f.text_field :nickname, autofocus: true, class: "rounded" %>
         </div>
         <div class="no_edit">
           <%= f.label :birthday, "生年月日" %><br>
@@ -14,10 +18,10 @@
         </div>
         <div class="field">
           <%= f.label :email, "メールアドレス" %><br>
-          <%= f.email_field :email, autofocus: true, class: "email rounded" %>
+          <%= f.email_field :email, autofocus: true, class: "rounded" %>
         </div>
         <div class="actions">
-          <%= f.submit "変更内容を保存", class: "btn btn-sm btn-secondary rounded mt-3" %>
+          <%= f.submit "変更内容を保存", class: "btn btn-sm btn-success rounded mt-3" %>
           <%= link_to "退会する", reviewers_unsubscribe_path, class: "btn btn-sm btn-danger mt-3" %>
         </div>
       <% end %>
