--- a/app/views/public/reviewer_comments/show.html.erb
+++ b/app/views/public/reviewer_comments/show.html.erb
@@ -2,13 +2,13 @@
   <div class='row'>
     <h4>レビュー内容詳細</h4>
     <div class='col-5 mx-auto'>
-      <%= image_tag @reviewer.get_profile_image, size:"200x200" %>
+      <%= image_tag @reviewer_comment.reviewer.get_profile_image, size:"200x200" %>
     </div>
     <div class='col-7 mx-auto'>
       <table class="table ml-0">
         <tr>
           <td class="border border-0" scope="col" width="200"><h5>投稿者</h5></td>
-          <td class="border border-0"><%= @reviewer.nickname %></td>
+          <td class="border border-0"><%= @reviewer_comment.reviewer.nickname %></td>
         </tr>
         <tr>
           <td class="border border-0"><h5>レビュー詳細</h5></td>
@@ -45,7 +45,7 @@
         <tr>
           <td class="border border-0"></td>
           <td class="border border-0">
-            <% if @reviewer_comment.reviewer == current_reviewer %>
+            <% if @reviewer_comment.reviewer == current_reviewer || admin_signed_in? %>
               <%= link_to "編集", edit_shop_reviewer_comment_path(@shop, @reviewer_comment), class: "btn btn-sm btn-success mr-2" %>
               <%= link_to "削除", shop_reviewer_comment_path(@shop,@reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger ml-2" %>
             <% end %>
