--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,11 +2,9 @@
   <div class="row">
     <div class="col-md-3">
       <p>お店のジャンルで絞り込み</p>
-      <% if @genres != nil %> <!--ジャンルが空じゃなければ-->
         <% @genres.each do |genre| %>
-          <%= genre.name %>
+          <p><%= link_to genre.name, shops_path(genre_id: genre.id) %></p>
         <% end %>
-      <% end %>
     </div>
 
     <div class='col-md-9'>
@@ -33,7 +31,7 @@
       <div class="search_form">
         <%= form_with url: search_path, local: true, method: :get do |f| %>
           <%= f.text_field :word %>
-          <%= f.select :range, options_for_select([["お店を探す", 'Shop'], ["レビューを探す", 'ReviewerComent']]) %>
+          <%= f.select :range, options_for_select([["お店を探す", 'Shop'], ["レビューを探す", 'ReviewerComment']]) %>
           <%= f.submit "検索", class: "btn btn-primary" %>
         <% end %>
   </div>
