--- a/app/views/public/shops/_reviewer_comments.html.erb
+++ b/app/views/public/shops/_reviewer_comments.html.erb
@@ -3,7 +3,7 @@
   <div class='row'>
     <div class='col'>
       <h5 class="bg-secondary text-light">レビュー一覧</h5>
-      <% shop.reviewer_comments.where.not(id: nil).each do |reviewer_comment| %>
+      <% reviewer_comments.each do |reviewer_comment| %>
       <div class='col'>
         <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
         <%= reviewer_comment.reviewer.nickname %>
