--- a/app/views/public/shops/_reviewer_comments.html.erb
+++ b/app/views/public/shops/_reviewer_comments.html.erb
@@ -3,32 +3,36 @@
   <div class='row'>
     <div class='col'>
       <h5 class="bg-secondary text-light">レビュー一覧</h5>
-      <% reviewer_comments.each do |reviewer_comment| %>
-      <div class='col'>
-        <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
-        <%= reviewer_comment.reviewer.nickname %>
-        <%= link_to shop_reviewer_comment_path(shop, reviewer_comment) do %>
-        <%= reviewer_comment.body.truncate(10, omission: "...") %> <!--長い文字列を省略する-->
-        <% end %>
-        <!--★評価の表示-->
-        <% if reviewer_comment.star_rate == 1.0 %>
-          ★☆☆☆☆
-          <% elsif reviewer_comment.star_rate == 2.0 %>
-            ★★☆☆☆
-          <% elsif reviewer_comment.star_rate == 3.0 %>
-            ★★★☆☆
-          <% elsif reviewer_comment.star_rate == 4.0 %>
-            ★★★★☆
-          <% elsif reviewer_comment.star_rate == 5.0 %>
-            ★★★★★
-        <% end %>
+      <% shop.reviewer_comments.each do |reviewer_comment| %>
+        <div class='col'>
+          <% if reviewer_comment.reviewer.nil? %>
+          <% else %>
+            <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
+            <%= reviewer_comment.reviewer.nickname %>
+            <%= link_to shop_reviewer_comment_path(shop, reviewer_comment) do %>
+            <%= reviewer_comment.body.truncate(10, omission: "...") %> <!--長い文字列を省略する-->
+            <% end %>
+            <!--★評価の表示-->
+            <% if reviewer_comment.star_rate == 1.0 %>
+              ★☆☆☆☆
+              <% elsif reviewer_comment.star_rate == 2.0 %>
+                ★★☆☆☆
+              <% elsif reviewer_comment.star_rate == 3.0 %>
+                ★★★☆☆
+              <% elsif reviewer_comment.star_rate == 4.0 %>
+                ★★★★☆
+              <% elsif reviewer_comment.star_rate == 5.0 %>
+                ★★★★★
+            <% end %>
 
-        <!--current_reviewerには編集・削除ボタンを出す-->
-        <% if reviewer_comment.reviewer == current_reviewer %>
-          <%= link_to "編集", edit_shop_reviewer_comment_path(shop, reviewer_comment), class: "btn btn-sm btn-success" %>
-          <%= link_to "削除", shop_reviewer_comment_path(shop,reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger" %>
-        <% end %>
-      </div>
+            <!--current_reviewerには編集・削除ボタンを出す-->
+            <% if reviewer_comment.reviewer == current_reviewer %>
+              <%= link_to "編集", edit_shop_reviewer_comment_path(shop, reviewer_comment), class: "btn btn-sm btn-success" %>
+              <%= link_to "削除", shop_reviewer_comment_path(shop,reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger" %>
+            <% end %>
+
+          <% end %>
+        </div>
       <% end %>
     </div>
   </div>
