[edit]shop/show_html

--- a/app/views/public/shops/show.html.erb
+++ b/app/views/public/shops/show.html.erb
@@ -15,6 +15,10 @@
           <td><%= @shop.address %></td>
         </tr>
         <tr>
+          <td>アクセス</td>
+          <td><%= @shop.access %></td>
+        </tr>
+        <tr>
           <td>備考</td>
           <td><%= @shop.introduction %></td>
         </tr>
