--- a/app/views/admin/shops/show.html.erb
+++ b/app/views/admin/shops/show.html.erb
@@ -15,6 +15,10 @@
           <td><%= @shop.address %></td>
         </tr>
         <tr>
+          <td>アクセス</td>
+          <td><%= @shop.access %></td>
+        </tr>
+        <tr>
           <td>備考</td>
           <td><%= @shop.introduction %></td>
         </tr>
@@ -27,7 +31,7 @@
           <%# byebug %>
           <td>
             <% @shop_payments.each do |shop_payments| %>
-              <%= shop_payments.id %>
+              <%= shop_payments.payment_name %>
             <% end %>
           </td>
         </tr>
