--- a/app/views/public/reviewer_comments/_index.html.erb
+++ b/app/views/public/reviewer_comments/_index.html.erb
@@ -7,7 +7,7 @@
       <div class='col'>
         <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
         <%= reviewer_comment.reviewer.nickname %>
-        <%= link_to shop_reviewer_comment_path(reviewer_comment.shop, reviewer_comment) do %>
+        <%= link_to reviewer_comment_path(reviewer_comment) do %>
         <%= reviewer_comment.body.truncate(10, omission: "...") %> <!--長い文字列を省略する-->
         <% end %>
         <!--★評価の表示-->
