--- a/app/views/public/reviewer_comments/edit.html.erb
+++ b/app/views/public/reviewer_comments/edit.html.erb
@@ -2,7 +2,7 @@
   <h5>コメント編集</h5>
   <h6>※変更できるのはレビュー本文のみです</h6>
   <div class='col-7 mt-5'>
-    <%= form_with model: @reviewer_comment, url: reviewer_comment_path(@reviewer_comment.shop, @reviewer_comment), method: :patch do |f| %>
+    <%= form_with model: @reviewer_comment, url: reviewer_comment_path(@reviewer_comment), method: :patch do |f| %>
     <strong class="mr-5">コメント内容</strong>
       <%= f.text_area :body, value: @reviewer_comment.body, class: "mr-5" %>
       <%= f.submit "変更内容を保存", class: "btn btn-success btn-sm" %>
