--- a/app/views/admin/shops/new.html.erb
+++ b/app/views/admin/shops/new.html.erb
@@ -49,6 +49,16 @@
         </div>
 
         <div class="form-group">
+          <%= f.label :name, "検索用タグ" %> <br>
+          <%= f.collection_check_boxes(:tag_ids, Tag.all, :id ,:name) do |tag| %>
+            <%= tag.label do %>
+              <%= tag.check_box %>
+              <%= tag.text %>
+            <% end %>
+          <% end %>
+        </div>
+
+        <div class="form-group">
           <%= f.submit "店舗情報を追加", class: 'btn btn-primary btn-sm' %>
         </div>
       <% end %>
