--- a/app/views/admin/shops/show.html.erb
+++ b/app/views/admin/shops/show.html.erb
@@ -1,10 +1,10 @@
 <div class='container'>
   <h4>店舗情報詳細</h4>
   <div class='row'>
-    <div class='col'>
+    <div class='col-xs-4'>
       <%= image_tag @shop.get_shop_image, size: "200x200" %>
     </div>
-    <div class='col'>
+    <div class='col-xs-8 ml-3'>
       <table>
         <tr>
           <td>店舗名</td>
@@ -39,8 +39,39 @@
           <td>店舗ジャンル</td>
           <td><%= @shop.genre.name %></td>
         </tr>
+        <tr>
+          <td>検索用タグ</td>
+          <td>
+            <% @tags.each do |tag| %>
+              <%= tag.name %>
+            <% end %>
+          </td>
+        </tr>
       </table>
       <%= link_to "店舗情報編集", edit_admin_shop_path, class: "btn btn-success" %>
     </div>
   </div>
+  <div class='row mt-4'>
+    <div class='col'>
+      <h5 class="bg-secondary text-light">レビュー一覧</h5>
+
+      <% @reviewer_comments.each do |reviewer_comment| %>
+        <div class='col'>
+          <% if reviewer_comment.reviewer.nil? %>
+          <% else %>
+            <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
+            <%= reviewer_comment.reviewer.nickname %>
+            <%= link_to reviewer_comment_path(reviewer_comment) do %>
+            <%= reviewer_comment.body.truncate(10, omission: "...") %> <!--長い文字列を省略する-->
+            <% end %>
+            <!--adminに編集・削除ボタンを出す-->
+            <% if admin_signed_in? %>
+              <%= link_to "削除", admin_reviewer_comment_path(reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger" %>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
 </div>
