--- a/app/views/public/shops/show.html.erb
+++ b/app/views/public/shops/show.html.erb
@@ -1,10 +1,10 @@
 <div class='container'>
   <h4 class='bg-secondary text-light'>店舗情報詳細</h4>
   <div class='row'>
-    <div class='col'>
+    <div class='col-3'>
       <%= image_tag @shop.get_shop_image, size: "200x200" %>
     </div>
-    <div class='col'>
+    <div class='col-8'>
       <table>
         <tr>
           <td>店舗名</td>
@@ -39,6 +39,14 @@
           <td>店舗ジャンル</td>
           <td><%= @shop.genre.name %></td>
         </tr>
+        <tr>
+          <td>検索タグ</td>
+          <td>
+            <% @tags.each do |tag| %>
+              <%= tag.name %>
+            <% end %>
+          </td>
+        </tr>
       </table>
     </div>
   </div>
@@ -68,16 +76,7 @@
               <%= f.radio_button :star_rate, 5 %>
             </div>
             <br>
-            <!--タグ選択-->
-            <div class="check_box">
-              <h6 class="bg-secondary text-light">タグを選択してださい</h6>
-              <%= collection_check_boxes(:tag, :tag_ids, Tag.all, :id, :name) do |tag| %>
-                <%= tag.label do %>
-                  <%= tag.check_box %>
-                  <%= tag.text %>
-                <% end %>
-              <% end %>
-            </div>
+          </div>
             <%= f.submit "コメントする", class: "btn btn-sm btn-success mt-3" %>
           <% end %>
         </div>
@@ -92,14 +91,12 @@
           <h6>コメントするには会員登録が必要です</h6><br>
         </div>
       <% end %>
-    </div>
-
     <!--レビュー一覧-->
-
     <div class='col'>
       <%= render 'public/shops/reviewer_comments', shop: @shop, reviewer_comments: @reviewer_comments %>
       <%= link_to '全てのレビューを表示する', shop_reviewer_comments_path(@shop) %>
     </div>
   </div>
+    </div>
 
 </div>
