--- a/app/views/admin/shops/edit.html.erb
+++ b/app/views/admin/shops/edit.html.erb
@@ -48,6 +48,16 @@
           <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: '選択してください' }, class: 'form-control' %>
         </div>
 
+        <div class="form-group">
+          <%= f.label :name, "検索用タグ" %> <br>
+          <%= f.collection_check_boxes(:tag_ids, Tag.all, :id ,:name) do |tag| %>
+            <%= tag.label do %>
+              <%= tag.check_box %>
+              <%= tag.text %>
+            <% end %>
+          <% end %>
+        </div>
+
         <div class="action">
           <%= f.submit "変更を保存", class: 'btn btn-primary btn-sm' %>
           <%= link_to "店舗情報を削除", admin_shop_path(@shop.id), class: 'btn btn-sm btn-danger', method: :delete %>
