--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -6,11 +6,21 @@
   <!--ジャンル追加フォーム-->
   <div class='row'>
     <div class='col-xs-3 mt-3'>
-    <%= form_with model: @genre, url: admin_genres_path(@genre.id), method: :post do |f| %>
+      <!--エラーメッセージ-->
+      <% if @genre.errors.any? %>
+        <%= @genre.errors.count %>件のエラーが発生しました
+        <ul>
+          <% @genre.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+
+      <%= form_with model: @genre, url: admin_genres_path(@genre.id), method: :post do |f| %>
         <%= f.label :name, '追加するジャンル名' %> <br>
         <%= f.text_field :name, class: 'form-control' %> <br>
         <%= f.submit '追加', class: 'btn btn-primary btn-sm' %>
-    <% end %>
+      <% end %>
     </div>
 
     <!--ジャンルの一覧表示-->
