--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,6 +88,11 @@
                   <i class="fas fa-sign-in-alt"></i> Log in
                 <% end %>
               </li>
+              <li>
+                <%= link_to new_admin_session_path ,class: 'nav-link text-secondary' do %>
+                  <i class="fas fa-user-shield"></i> 管理者Log in
+                <% end %>
+              </li>
             <% end %>
 
             </ul>
