--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import url('https://fonts.googleapis.com/css2? family= Kiwi+Maru:wght@300 & display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -9,7 +9,7 @@
   }
 
  * {
-  font-family: 'キウイ丸', serif;
+  font-family: 'M PLUS 2', sans-serif;
   }
 
 
