--- a/app/views/admin/shop_payments/index.html.erb
+++ b/app/views/admin/shop_payments/index.html.erb
@@ -27,7 +27,7 @@
           <tr>
             <td><%= payments.payment_name %></td>
             <td><%= link_to "編集", edit_admin_shop_payment_path(payments.id), class: "ml-4 btn-sm btn-primary" %>
-                <%= link_to "削除", admin_shop_payment_path(payments.id), class: "btn-sm btn-danger", method: :delete %></td>
+                <%= link_to "削除", admin_shop_payment_path(payments.id), class: "btn-sm btn-danger", method: :delete,  "data-confirm" => "削除しますか？" %></td>
           </tr>
           <% end %>
         </tbody>
