[setting]管理者側/ジャンル・店舗・支払情報の新規登録時にバリデーション

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -7,14 +7,7 @@
   <div class='row'>
     <div class='col-xs-3 mt-3'>
       <!--エラーメッセージ-->
-      <% if @genre.errors.any? %>
-        <%= @genre.errors.count %>件のエラーが発生しました
-        <ul>
-          <% @genre.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      <% end %>
+      <%= render "admin/shared/error_messages", resource: @genre %>
 
       <%= form_with model: @genre, url: admin_genres_path(@genre.id), method: :post do |f| %>
         <%= f.label :name, '追加するジャンル名' %> <br>
@@ -37,7 +30,7 @@
           <tr>
             <td><%= genre.name %></td>
             <td><%= link_to '編集', edit_admin_genre_path(genre.id), class: 'ml-4 btn-sm btn-primary' %>
-                <%= link_to '削除', admin_genre_path(genre.id), class: 'btn-sm btn-danger', method: :delete %></td>
+                <%= link_to '削除', admin_genre_path(genre.id), class: 'btn-sm btn-danger', method: :delete, "data-confirm" => "削除しますか？" %></td>
           </tr>
           <% end %>
         </tbody>
