--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,6 +3,8 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
       <h2>新規会員登録</h2>
       <%= form_with model: @reviewer, url: reviewer_registration_path, id: 'new_reviewer', class: 'new_reviewer', local: true do |f| %>
+      
+      <!--エラーメッセージ-->
       <%= render "public/shared/error_messages", resource: resource %>
 
         <div class="field">
