[edit]お店詳細画面

--- a/app/views/public/shops/show.html.erb
+++ b/app/views/public/shops/show.html.erb
@@ -37,7 +37,7 @@
         </tr>
         <tr>
           <td>店舗ジャンル</td>
-          <td><%= @shop.genre. %></td>
+          <td><%= @shop.genre.name %></td>
         </tr>
         <tr>
           <td>検索タグ</td>
